fix: try overflow on game screen

--- a/src/components/screens/GameScreen/GameScreen.module.scss
+++ b/src/components/screens/GameScreen/GameScreen.module.scss
@@ -4,6 +4,7 @@
   position: relative;
   width: 100vw;
   height: 100svh;
+  overflow: hidden;
   background-color: var(--black-5);
   z-index: 1;
 
